using UnityEngine;

[CreateAssetMenu(fileName = "Animation Hashes", menuName = "Animations")]
public class SOAnimationHashes : ScriptableObject
{
    //EXECUTIONER
    public int Block;
    public int BlockHit;
    public int FrontHit;
    public int BackHit;
    public int HighAttack_L;
    public int HighAttack_R;
    public int SpinAttack_R;
    public int MidAttack_R;
    public int StraightAttack;

    /////////
    public int Dodge;
    public int Stun;
    public int SheathSword;
    public int UnsheatheSword;
    public int WalkAnimationHash;
    public int IdleAnimationHash;
    public int HitAnimationHash;
    public int BackHitAnimationHash;
    public int ChestHitAnimationHash;
    public int LeftHitAnimationHash;
    public int Attack_01;
    public int Attack_02;
    public int Attack_03;
    public int Attack_04;
    public int KnockbackAnimationHash;
    public int BlockAnimation;
    public int RunAnimationHash;
    public int FightingIdleHash;
    public int PlaceHolder;
}

